--- a/ide-redesign/styles/_number-selector.scss
+++ b/ide-redesign/styles/_number-selector.scss
@@ -1,9 +1,3 @@
-.input-number-decrement,
-.input-number-increment {
-  border: 1px solid #ccc;
-  height: 25px;
-  user-select: none;
-}
 .input-number input[type="text"] {
   height: 25px;
   width: 50px;
@@ -21,16 +15,19 @@
 
 .input-number-decrement,
 .input-number-increment {
-  display: inline-block;
-  width: 25px;
-  max-height: 23px;
-  line-height: 25px;
   background: $grey-light;
+  border: 1px solid #ccc;
   color: rgba(0, 0, 0, 0.8);
-  text-align: center;
-  font-weight: bold;
   cursor: pointer;
-
+  display: inline-block;
+  height: 25px;
+  font-weight: bold;
+  line-height: 25px;
+  // max-height: 23px;
+  padding: 0;
+  text-align: center;
+  user-select: none;
+  width: 25px;
   &:active {
     background: $teal-02;
   }
