--- a/ide-redesign/styles/_upper.scss
+++ b/ide-redesign/styles/_upper.scss
@@ -1,16 +1,19 @@
-div.file-status {
+.file-status {
   margin-left: 60px;
-  span.project, span.file {
+  white-space: nowrap;
+  .project,
+  .file,
+  .status {
     display: inline-block;
     padding-top:10px;
     font-family: space_regular;
     font-size: 16px;
     color: $teal-main;
-    span.current {
-      font-family: poppins_regular;
-      color: rgba(0, 0, 0, 0.7);
-      padding-right: 20px;
-      font-size: 14px;
-    }	
+  }
+  .current {
+    font-family: poppins_regular;
+    color: rgba(0, 0, 0, 0.7);
+    padding-right: 20px;
+    font-size: 14px;
   }
 }
