--- a/ide-redesign/styles/_file-list.scss
+++ b/ide-redesign/styles/_file-list.scss
@@ -29,7 +29,7 @@ ul {
 		background: rgba(255, 255, 0, 0.2);
 	}
 	&:before {
-    content: '-'; /* Unicode character for "minus" sign (-) */
+    content: '>'; /* Unicode character for "minus" sign (-) */
     font-family: poppins_light;
 		margin-right: 5px;
 		size: 12px;
