FEAT: IDE Unfurl - Implemented current file selector on project view as well as removing more ID selectors in favour of data bindings

--- a/ide-redesign/styles/_file-list.scss
+++ b/ide-redesign/styles/_file-list.scss
@@ -25,7 +25,8 @@ ul {
   color: rgba(0, 0, 0, 0.8);
 	font-size: 14px;
 	padding: 4px 12px;
-	&:hover {
+	&:hover,
+  &.selected {
 		background: rgba(255, 255, 0, 0.2);
 	}
 	&:before {
