--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -626,7 +626,7 @@ ul {
   color: rgba(0, 0, 0, 0.8);
   font-size: 14px;
   padding: 4px 12px; }
-  .sub-file-list > li:hover {
+  .sub-file-list > li:hover, .sub-file-list > li.selected {
     background: rgba(255, 255, 0, 0.2); }
   .sub-file-list > li:before {
     content: '>';
