--- a/ide-redesign/styles/_popup.scss
+++ b/ide-redesign/styles/_popup.scss
@@ -1,39 +1,35 @@
 #popup {
   background: white;
-  border: 2px solid #666;
-  border-radius: 10px;
+  border: 1px solid $grey-mid;
 	display: none;
-  font-size: 14px;
-	left: calc((100% / 2) - 200px);
+	left: calc((100% / 2) - 300px);
   margin-bottom: 10px;
   min-height: 100px;
-	padding: 0 20px 30px;
+	padding: 4em;
   position: absolute;
-  top: calc((100% / 2) - 150px);
-  width: 400px;
+  top: calc((100% / 2) - 300px);
+  width: 600px;
   &.active {
     display: inline;
     z-index: 9999;
   }
   h1 {
-    color: #82C889;
-    font-family: sofia;
-    font-size: 25px;
-    line-height: 30px;
-    margin: 20px 0;
-  }
+      font-size: 2em;
+      font-family: space_bold;
+      color: $teal-main;
+    }
   & p, & form {
     color: #999;
-    font-family: sofia;
-    font-size: 14px;
+    font-family: poppins_light;
+    font-size: 1em;
     margin-bottom: 10px;
   }
   input {
     font-size: 16px;
     padding: 10px;
     &[type=text] {
-      margin: 10px 0 20px;
-      width: 250px;
+      margin: 1em;
+      width: 15em;
     }
     &[type=checkbox], &[type=radio] {
       margin: 2px 10px;
@@ -53,6 +49,25 @@
   }
   button {
     float: right;
-    margin: 10px 5px 0;
+    margin-top: .5em;
+    font-size: 1em; 
+    padding: .5em .75em;
+    margin-left: .75em;
+    &.confirm { 
+      background: $teal-main;
+      opacity: 0.7;
+      color: $white;
+      border-bottom: 4px solid $teal-base;
+      &:hover {
+        background: $teal-01;
+        color: $grey-dark;
+        border-bottom: 1px solid $teal-base;
+      }
+    }
+    &.cancel {
+      background: $grey-light;
+    } 
   }
 }
+
+
