--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -15,6 +15,7 @@ $teal-02: #63ffd9;
 $teal-03: #a6ffea;
 
 $grey-light: #f1f1f1;
+$grey-light-mid: rgba(0,0,0,0.2);
 $grey-mid: #bdbdbd;
 
 $grey-tabs: #c9c9c9;
