--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -20,6 +20,9 @@ $grey-mid: #bdbdbd;
 
 $grey-tabs: #c9c9c9;
 
+$accent-red: rgb(255, 94, 91);
+$accent-red-fade: #FF918E;
+
 $grey-editorbg: #eeeeee;
 
 $grey-toolbar: #c9c9c9;
