Changed styles for appearance of accordion menus, better contrast.

--- a/ide-redesign/styles/_accordion-menu.scss
+++ b/ide-redesign/styles/_accordion-menu.scss
@@ -1,8 +1,8 @@
 button.accordion {
-  background-color: $grey-light;
+  background-color: $grey-light-mid;
   border: none;
   border-bottom: 2px solid #fff;
-  color: rgba(0, 0, 0, 0.6);
+  color: $grey-dark;
   cursor: pointer;
   font-family: poppins_regular;
   font-size: 16px;
@@ -10,29 +10,36 @@ button.accordion {
   outline: none;
   padding: 8px 14px;
   text-align: left;
-  transition: 0.3s ease-in-out;
+  transition: 0.1s ease-in-out;
   width: calc(100% - 12px);
   &:hover {
-    background: #ddd;
+    background: $grey-light;
+    color: $grey-dark;
+    opacity: 1;
     border-bottom: 2px solid $teal-main;
   }
   &.active {
-    background-color: #fff;
+    background-color: $grey-light;
     border-bottom: 2px solid $teal-main;
     padding: 8px 14px;
+    color: $grey-dark;
     &:after {
       content: "\2796"; /* Unicode character for "minus" sign (-) */
     }
+    &:hover {
+      color: $grey-dark;
+      opacity: 1;
+    }
   }
   &:after {
-    color:  rgba(0, 0, 0, 0.6);
+    color:  $grey-dark;
     content: '\02795'; /* Unicode character for "plus" sign (+) */
     float: right;
     font-size: 14px;
     margin-left: 5px;
   }
   &.sub {
-    background-color: #ddd;
+    background-color: $grey-light;
     margin-left: 20px;
     margin-top: 0;
     width: calc(100% - 20px);
@@ -41,7 +48,8 @@ button.accordion {
       border-bottom: 2px solid white;
     }
     &.active {
-      background: $grey-light;
+      background: $grey-light-mid;
+      color: $grey-dark;
       border-bottom: none;
       padding: 8px 14px;
       &:after {
@@ -49,7 +57,7 @@ button.accordion {
       }
     }
     &:after {
-      color:  rgba(0, 0, 0, 0.6);
+      color:  $grey-dark;
       content: '\02795'; /* Unicode character for "plus" sign (+) */
       float: right;
       font-size: 14px;
