Small cosmetic changes to the dropdown.

--- a/ide-redesign/styles/_dropdown.scss
+++ b/ide-redesign/styles/_dropdown.scss
@@ -6,7 +6,7 @@ button.dropbtn {
     background-color: #fff;
     font-family: poppins_regular;
     color: $teal-main;
-    padding: 6px 16px;
+    //padding: 6px 16px;
     font-size: 14px;
     text-align: left;
     border: none;
