--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -28,6 +28,10 @@ $amber-accent: #f26d21;
 
 $grey-dark: rgba(0,0,0,0.8);
 
+$yellow-accent: #fff07c;
+
+$yellow-accent-fade: #FFFFC9;
+
 @import 'reset';
 @import 'fonts';
 
@@ -122,4 +126,4 @@ hr {
 @import 'text-input';
 @import 'toolbar';
 @import 'upper';
-@imoprt 'docs';
+@import 'docs';
