Added component for sliders for use in the scope. Added to base for sass compiling.

--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -28,6 +28,8 @@ $amber-accent: #f26d21;
 
 $grey-dark: rgba(0,0,0,0.8);
 
+$trans-reg: 0.1s;
+
 @import 'reset';
 @import 'fonts';
 
@@ -104,6 +106,7 @@ hr {
 
 @import 'accordion-menu';
 @import 'buttons';
+@import 'slider';
 @import 'console';
 @import 'dropdown';
 @import 'dropdown-mini';
