--- a/ide-redesign/styles/_tab-content.scss
+++ b/ide-redesign/styles/_tab-content.scss
@@ -94,6 +94,13 @@ input[type="checkbox"].checkbox-slider,
   }
 }
 
+
+.project {
+  font-family: poppins_regular;
+  margin-top: .5em;
+  margin-bottom: 0;
+}
+
 .panel.show {
   margin-left: .25em;
   padding-top: .8em;
@@ -111,5 +118,11 @@ input[type="checkbox"].checkbox-slider,
         border-top: 5px solid $grey-mid;
       }
     }
+  }
+}
+
+.button-container {
+  button {
+    margin-bottom: .5em;
   }
 }
