--- a/ide-redesign/styles/_docs.scss
+++ b/ide-redesign/styles/_docs.scss
@@ -1,7 +1,7 @@
 /**** Documentation content styles ****/
 .subsections {
   .intro-content {
-    margin-bottom: 1.5em;
+    margin-bottom: .5em;
   }
   .docs-content {
     display: hidden;
