--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -77,6 +77,9 @@ img {
   outline: none; }
 
 /* Container for upper elements - editor and tabs */
+.hidden {
+  display: none; }
+
 .upper {
   height: 100%;
   position: relative;
@@ -136,16 +139,19 @@ button.accordion {
   outline: none;
   padding: 8px 14px;
   text-align: left;
-  -webkit-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
   width: calc(100% - 12px); }
   button.accordion:hover {
-    background: #ddd;
+    background: #bdbdbd;
     border-bottom: 2px solid #00bea4; }
   button.accordion.active {
-    background-color: #fff;
+    background-color: #ffffff;
     border-bottom: 2px solid #00bea4;
+    color: rgba(0, 0, 0, 0.8);
     padding: 8px 14px; }
+    button.accordion.active:hover {
+      color: rgba(0, 0, 0, 0.8); }
     button.accordion.active:after {
       content: "\2796";
       /* Unicode character for "minus" sign (-) */ }
@@ -156,28 +162,38 @@ button.accordion {
     float: right;
     font-size: 14px;
     margin-left: 5px; }
-  button.accordion.sub {
-    background-color: #ddd;
-    margin-left: 20px;
-    margin-top: 0;
-    width: calc(100% - 20px); }
-    button.accordion.sub:hover {
-      background: #ddd;
-      border-bottom: 2px solid white; }
-    button.accordion.sub.active {
-      background: #f1f1f1;
-      border-bottom: none;
-      padding: 8px 14px; }
-      button.accordion.sub.active:after {
-        content: "\2796";
-        /* Unicode character for "minus" sign (-) */ }
-    button.accordion.sub:after {
-      color: rgba(0, 0, 0, 0.6);
-      content: '\02795';
-      /* Unicode character for "plus" sign (+) */
-      float: right;
-      font-size: 14px;
-      margin-left: 5px; }
+
+button.accordion-sub {
+  background: transparent;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 1em;
+  padding: .5em 0 .5em .8em;
+  text-align: left;
+  width: 100%; }
+  button.accordion-sub:hover {
+    background: #FFFFC9;
+    color: rgba(0, 0, 0, 0.8); }
+  button.accordion-sub.active {
+    color: rgba(0, 0, 0, 0.8); }
+    button.accordion-sub.active:hover {
+      color: rgba(0, 0, 0, 0.8); }
+
+.docs-content {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s; }
+  .docs-content.show {
+    max-height: 100000px;
+    /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+    opacity: 1; }
 
 .panel {
   max-height: 0;
@@ -202,15 +218,13 @@ a.button {
 
 button,
 .button {
-  border-bottom: 2px solid #00bea4;
-  border-left: rgba(0, 190, 164, 0.4);
-  border-right: rgba(0, 190, 164, 0.4);
-  border-top: rgba(0, 190, 164, 0.4);
-  background-color: rgba(0, 190, 164, 0.4);
-  border-radius: 2px;
+  border: 1px solid #00bea4;
+  background-color: #ffffff;
+  border-radius: 3px;
+  font-size: .8em;
   cursor: pointer;
   font-family: poppins_light;
-  padding: 6px 12px; }
+  padding: .5em .7em; }
   button.active,
   .button.active {
     color: rgba(0, 0, 0, 0.4); }
@@ -219,21 +233,21 @@ button,
       color: rgba(0, 0, 0, 0.4); }
   button:hover,
   .button:hover {
-    background-color: rgba(0, 190, 164, 0.7);
+    background-color: #00bea4;
     color: rgba(255, 255, 255, 0.9);
     -webkit-transition: 0.1s ease-in-out;
     transition: 0.1s ease-in-out; }
   button.create-project,
   .button.create-project {
-    font-size: 14px;
-    margin-top: -1px;
+    font-size: .9em;
+    margin-top: 2px;
     padding-right: 20px; }
     button.create-project:hover,
     .button.create-project:hover {
       color: #ffffff; }
     button.create-project:before,
     .button.create-project:before {
-      color: rgba(0, 0, 0, 0.4);
+      color: rgba(0, 0, 0, 0.8);
       content: '+';
       /* Unicode character for "plus" sign (+) */
       font-family: space_bold;
@@ -244,11 +258,8 @@ button,
   button:disabled,
   .button:disabled {
     background-color: rgba(0, 0, 0, 0.1);
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-    border-left: rgba(0, 0, 0, 0.1);
-    border-right: rgba(0, 0, 0, 0.1);
-    border-top: rgba(0, 0, 0, 0.1);
-    color: rgba(0, 0, 0, 0.9); }
+    border: 1px solid #e5e5e5;
+    color: rgba(0, 0, 0, 0.8); }
 
 #beaglert-console {
   background-color: white;
@@ -458,6 +469,47 @@ button,
   transition: opacity 0.3s;
   white-space: nowrap; }
 
+/**** Documentation content styles ****/
+.subsections .intro-content {
+  margin-bottom: .5em; }
+
+.subsections .docs-content {
+  display: hidden; }
+  .subsections .docs-content.show {
+    display: visible; }
+
+.subsections .intro-header {
+  font-family: poppins_regular;
+  font-size: 1.2em;
+  line-height: 1em;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: .5em;
+          margin-block-end: .5em; }
+
+.subsections .memberdef-title {
+  font-family: inconsolata;
+  font-weight: bold;
+  font-size: 1em;
+  line-height: 1.2em;
+  -webkit-margin-before: .5em;
+          margin-block-start: .5em;
+  -webkit-margin-after: .5em;
+          margin-block-end: .5em; }
+
+.subsections li div p {
+  padding: .5em 0 .75em;
+  margin: 0; }
+
+.subsections div ul li h4 {
+  margin: 0; }
+
+.subsections .examples-header {
+  color: #009587;
+  font-family: space_bold;
+  font-size: 1.1em;
+  margin: .5em; }
+
 /* Dropdown Button */
 button.dropbtn {
   position: relative;
@@ -465,7 +517,6 @@ button.dropbtn {
   background-color: #fff;
   font-family: poppins_regular;
   color: #00bea4;
-  padding: 6px 16px;
   font-size: 14px;
   text-align: left;
   border: none;
@@ -767,42 +818,36 @@ img.explorer {
 
 #popup {
   background: white;
-  border: 2px solid #666;
-  border-radius: 10px;
+  border: 1px solid #bdbdbd;
   display: none;
-  font-size: 14px;
-  left: calc((100% / 2) - 200px);
+  left: calc((100% / 2) - 300px);
   margin-bottom: 10px;
   min-height: 100px;
-  padding: 0 20px 30px;
+  padding: 4em;
   position: absolute;
-  top: calc((100% / 2) - 150px);
-  width: 400px; }
+  top: calc((100% / 2) - 300px);
+  width: 600px;
+  /* Styles for custom radio buttons */
+  /* Styles for custom UI buttons for popups */ }
   #popup.active {
     display: inline;
     z-index: 9999; }
   #popup h1 {
-    color: #82C889;
-    font-family: sofia;
-    font-size: 25px;
-    line-height: 30px;
-    margin: 20px 0; }
+    font-size: 2em;
+    font-family: space_bold;
+    color: #00bea4; }
   #popup p, #popup form {
     color: #999;
-    font-family: sofia;
-    font-size: 14px;
+    font-family: poppins_light;
+    font-size: 1em;
     margin-bottom: 10px; }
   #popup input {
-    font-size: 16px;
-    padding: 10px; }
+    font-size: 1em;
+    padding: .5em;
+    line-height: 1em; }
     #popup input[type=text] {
-      margin: 10px 0 20px;
-      width: 250px; }
-    #popup input[type=checkbox], #popup input[type=radio] {
-      margin: 2px 10px;
-      position: relative;
-      top: 5px;
-      width: initial; }
+      margin-top: 1em;
+      width: 15em; }
     #popup input[type=file] {
       background: initial;
       border: initial;
@@ -810,9 +855,60 @@ img.explorer {
     #popup input::-webkit-input-placeholder {
       color: #bdbdbd;
       font-style: italic; }
+  #popup .radio-container {
+    display: block;
+    position: relative;
+    padding-left: 2em;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
+  #popup .radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer; }
+  #popup .radio-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1em;
+    width: 1em;
+    background-color: #bdbdbd;
+    opacity: 0.5;
+    border-radius: 50%;
+    margin-top: .25em; }
+  #popup .radio-container:hover input ~ .radio-button {
+    opacity: 1; }
+  #popup .radio-container input:checked ~ .radio-button {
+    background-color: #1ce8b5;
+    opacity: 1; }
   #popup button {
     float: right;
-    margin: 10px 5px 0; }
+    margin-top: .5em;
+    font-size: 1em;
+    padding: .5em 2em;
+    margin-left: .75em; }
+    #popup button.confirm {
+      border: 1px solid #1ce8b5;
+      background: #1ce8b5;
+      color: rgba(0, 0, 0, 0.8); }
+      #popup button.confirm:hover {
+        border: 1px solid #63ffd9;
+        background: #63ffd9; }
+    #popup button.cancel {
+      background: #ffffff;
+      border: 1px solid #bdbdbd; }
+      #popup button.cancel:hover {
+        background: #e5e5e5;
+        color: rgba(0, 0, 0, 0.8); }
+    #popup button.delete {
+      border: 1px solid #FF918E;
+      background-color: #FF918E;
+      color: rgba(0, 0, 0, 0.8); }
+      #popup button.delete:hover {
+        background-color: #ff5e5b;
+        border: 1px solid #ff5e5b; }
 
 ::-webkit-scrollbar {
   width: 12px; }
@@ -829,13 +925,13 @@ img.explorer {
 .tabs {
   background-color: white;
   height: calc(100% + 35px);
-  width: 450px;
+  left: calc(100% - 50px);
   position: absolute;
   top: 0;
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
-  z-index: 99;
-  left: calc(100% - 50px); }
+  width: 450px;
+  z-index: 99; }
 
 .tabs-closed {
   left: calc(100% - 50px); }
@@ -846,14 +942,14 @@ img.explorer {
   left: calc(100% - 438px); }
 
 #tab-menu {
-  width: 50px;
-  height: 100%;
   background-color: #c9c9c9;
-  float: left; }
+  float: left;
+  height: 100%;
+  width: 50px; }
 
 #tab-content-area {
-  height: calc(100% - 76px);
   background-color: #fff;
+  height: calc(100% - 76px);
   overflow: auto; }
 
 section#tab-content {
@@ -867,22 +963,20 @@ section#tab-content {
       background: transparent; }
     section#tab-content .title-container h1 {
       border-bottom: 10px solid #1ce8b5;
-      display: inline-block;
-      font-size: 24px;
-      font-family: space_bold;
       color: rgba(0, 0, 0, 0.8);
+      display: inline-block;
+      font-family: space_bold;
+      font-size: 24px;
       opacity: 0.8; }
-  section#tab-content p {
-    font-size: 12px; }
 
 .disabled {
   display: none; }
 
 .choice {
-  padding-bottom: 10px;
+  color: rgba(0, 0, 0, 0.6);
   font-family: poppins_light;
   font-size: 12px;
-  color: rgba(0, 0, 0, 0.6); }
+  padding-bottom: 10px; }
   .choice tr {
     display: block;
     padding-bottom: 10px; }
@@ -967,8 +1061,14 @@ input[type="checkbox"].checkbox-slider,
             transform: translateY(-50%) translateX(99%);
     width: 15px; }
 
+.project {
+  font-family: poppins_regular;
+  margin-top: .5em;
+  margin-bottom: 0; }
+
 .panel.show {
-  padding-top: 10px; }
+  margin-left: .25em;
+  padding-top: .8em; }
 
 .mux {
   padding-top: 5px; }
@@ -980,11 +1080,11 @@ input[type="checkbox"].checkbox-slider,
       border: 5px solid transparent;
       border-top: 5px solid #bdbdbd; }
 
-.subsections h3 {
-  font-family: poppins_regular; }
+.button-container button {
+  margin-bottom: .5em; }
 
-.subsections .example-list li a {
-  cursor: pointer; }
+.diagram-text {
+  font-size: .8em; }
 
 /*
  * Make each label stack on top of one another.
