--- a/ide-redesign/styles/_slider.scss
+++ b/ide-redesign/styles/_slider.scss
@@ -9,25 +9,23 @@ input[type="range"].range-slider {
   transition: .25s, ease-in-out;
 
   &::-webkit-slider-runnable-track {
-    height: 20px;
-    cursor: pointer;
     background: rgba(0,0,0, 0.2);
     border-radius: 9px;
-    // border: 0.2px solid $grey-light;
+    cursor: pointer;
+    height: 20px;
     padding: 2px 2px 2px 2px;
   }
   &::-webkit-slider-thumb {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    // border: 1px solid #000000;
-    height: 16px;
-    width: 16px;
-    border-radius: 8px;
-    background: rgba($white, 0.8);
-    cursor: pointer;
+    appearance: none;
     -webkit-appearance: none;
+    background: rgba($white, 0.8);
+    border-radius: 8px;
+    cursor: pointer;
+    height: 16px;
     margin-top: 0px;
     transition: .25s, ease-in-out;
-    // box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+    width: 16px;
   }
   &:hover::-webkit-slider-runnable-track, &:active::-webkit-slider-runnable-track {
     background: $teal-01;
